--- a/templates/portafolio.html
+++ b/templates/portafolio.html
@@ -3,22 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Porfolio.la</title>
+	<link rel="stylesheet" href="../static/css/normalize.css">
+	<link rel="stylesheet" href="../static/css/estilos.css">
 </head>
 <body>
-	<header>
+	<header id="yo">
 		<nav>
 			<ul>
 				<li>
 					<a href="#yo">Yo</a>
 				</li>
 				<li>
-					<a href="#yo">Perfil</a>
+					<a href="#perfil">Perfil</a>
 				</li>
 				<li>
-					<a href="#yo">Trabajo</a>
+					<a href="#trabajo">Trabajo</a>
 				</li>
 				<li>
-					<a href="#yo">Contacto</a>
+					<a href="#contacto">Contacto</a>
 				</li>
 			</ul>
 		</nav>
@@ -28,7 +30,7 @@
 		</figure>
 		<p>Jordi Pàmies</p>
 	</header>
-	<section>
+	<section id="pefil">
 		<h2>Mi Perfil</h2>
 		<p>
 			Hola! si llegaste hasta aquí puedes ver mi portafolio y contratarme. 
@@ -37,7 +39,7 @@
 		<a href="http://facebook.com/jpcpamies" target='blank'>jpcpamies</a>
 		<a href="http://github.com/jpcpamies" target='blank'>jpcpamies</a>
 	</section>
-	<section>
+	<section id="trabajo">
 		<h2>Mi Trabajo</h2>
 		<article>
 			<figure>
@@ -70,7 +72,7 @@
 			</figure>
 		</article>
 	</section>
-	<footer>
+	<footer id="contacto">
 		<h3>Contacto</h3>
 		<p>Si tienes una sigerencia o quieres trabajar conmigo ponte en contacto con este formulario.</p>
 		<form>
