--- a/templates/portafolio.html
+++ b/templates/portafolio.html
@@ -31,7 +31,7 @@
 		<p class="Header-name">Jordi Pàmies</p>
 	</header>
 	<section id="pefil" class="Profile">
-		<h2 class="Profile-title">Mi Perfil</h2>
+		<h2 class="Profile-title u-title">Mi Perfil</h2>
 		<p class="Profile-description">
 			Hola! si llegaste hasta aquí puedes ver mi portafolio y contratarme. 
 		</p>
@@ -40,7 +40,7 @@
 		<a class="Profile-link" href="http://github.com/jpcpamies" target='blank'>jpcpamies</a>
 	</section>
 	<section id="trabajo" class="Work">
-		<h2 class="Work-title">Mi Trabajo</h2>
+		<h2 class="Work-title u-title">Mi Trabajo</h2>
 		<article class="Work-item">
 			<figure class="Work-imageContainer">
 				<img class="Work-image" src="fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
