--- a/templates/portafolio.html
+++ b/templates/portafolio.html
@@ -19,8 +19,8 @@
 				</li>
 				<li class="MainMenu-item">
 					<a class="MainMenu-link" href="#trabajo">Trabajo</a>
-				</li class="MainMenu-item">
-				<li>
+				</li>
+				<li class="MainMenu-item">
 					<a class="MainMenu-link" href="#contacto">Contacto</a>
 				</li>
 			</ul>
