--- a/templates/portafolio.html
+++ b/templates/portafolio.html
@@ -26,7 +26,7 @@
 			</ul>
 		</nav>
 		<figure class="Header-imageContainer">
-			<img class="Header-image" src="avatar.jpg" alt="Imagen personal"  />
+			<img class="Header-image" src="../static/images/avatar.jpg" alt="Imagen personal"  />
 			<figcaption class="Header-imageDescription"><a class="Header-link" href="http://twitter.com/jpcpamies" target='blank'>@jpcpamies</a></figcaption>
 		</figure>
 		<p class="Header-name">Jordi Pàmies</p>
