--- a/templates/portafolio.html
+++ b/templates/portafolio.html
@@ -44,31 +44,31 @@
 		<h2 class="Work-title u-title">Mi Trabajo</h2>
 		<article class="Work-item">
 			<figure class="Work-imageContainer">
-				<img class="Work-image" src="fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+				<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
 				<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
 			</figure>
 		</article>
 		<article class="Work-item">
 			<figure class="Work-imageContainer">
-				<img class="Work-image" src="fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+				<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
 				<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
 			</figure>
 		</article>
 		<article class="Work-item">
 			<figure class="Work-imageContainer">
-				<img class="Work-image" src="fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+				<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
 				<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
 			</figure>
 		</article>
 		<article class="Work-item">
 			<figure class="Work-imageContainer">
-				<img class="Work-image" src="fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+				<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
 				<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
 			</figure>
 		</article>
 		<article class="Work-item">
 			<figure class="Work-imageContainer">
-				<img class="Work-image" src="fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+				<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
 				<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
 			</figure>
 		</article>
