--- a/templates/portafolio.html
+++ b/templates/portafolio.html
@@ -74,8 +74,10 @@
 		</article>
 	</section>
 	<footer id="contacto" class="Footer">
-		<h3 class="Footer-title">Contacto</h3>
-		<p class="Footer-description">Si tienes una sigerencia o quieres trabajar conmigo ponte en contacto con este formulario.</p>
+		<div class="Footer-left">
+			<h3 class="Footer-title">Contacto</h3>
+			<p class="Footer-description">Si tienes una sigerencia o quieres trabajar conmigo ponte en contacto con este formulario.</p>
+		</div>
 		<form class="Footer-form">
 			<input class="Footer-fromInput" type="text" placeholder="Nombre"/>
 			<input class="Footer-fromInput" type="email" placeholder="Email"/>
