--- a/templates/portafolio.html
+++ b/templates/portafolio.html
@@ -43,34 +43,44 @@
 	<section id="trabajo" class="Work">
 		<h2 class="Work-title u-title">Mi Trabajo</h2>
 		<article class="Work-item">
-			<figure class="Work-imageContainer">
-				<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
-				<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
-			</figure>
+			<a class="Work-link" href="http://reesongroup.github.io/fqu/" target="blank">
+				<figure class="Work-imageContainer">
+					<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+					<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
+				</figure>
+			</a>
 		</article>
 		<article class="Work-item">
-			<figure class="Work-imageContainer">
-				<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
-				<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
-			</figure>
+			<a class="Work-link" href="http://reesongroup.github.io/fqu/" target="blank">
+				<figure class="Work-imageContainer">
+					<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+					<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
+				</figure>
+			</a>
 		</article>
 		<article class="Work-item">
-			<figure class="Work-imageContainer">
-				<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
-				<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
-			</figure>
+			<a class="Work-link" href="http://reesongroup.github.io/fqu/" target="blank">
+				<figure class="Work-imageContainer">
+					<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+					<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
+				</figure>
+			</a>
 		</article>
 		<article class="Work-item">
-			<figure class="Work-imageContainer">
-				<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
-				<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
-			</figure>
+			<a class="Work-link" href="http://reesongroup.github.io/fqu/" target="blank">
+				<figure class="Work-imageContainer">
+					<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+					<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
+				</figure>
+			</a>
 		</article>
 		<article class="Work-item">
-			<figure class="Work-imageContainer">
-				<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
-				<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
-			</figure>
+			<a class="Work-link" href="http://reesongroup.github.io/fqu/" target="blank">
+				<figure class="Work-imageContainer">
+					<img class="Work-image" src="../static/images/fqu.jpg" alt="Página web de las fiestes Quinquenlaes de Ulldecona 2014">
+					<figcaption class="Work-description"> WebApp - Fiesteas Quinquennales Ulldecona 2014</figcaption>
+				</figure>
+			</a>
 		</article>
 	</section>
 	<footer id="contacto" class="Footer">
